# documind-rag-system

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
app/: main.py
app/api/: main.py
app/api/v1/: endpoints.py
app/core/: config.py  logging.py
app/schemas/: request_response.py
app/services/: document_processor.py  embedding_service.py  llm_service.py  vector_db_service.py
data/evaluation/: test_questions.json
frontend/: streamlit_app.py
scripts/: evaluate_rag.py  ingest_documents.py
tests/: conftest.py
tests/integration/: test_api_endpoints.py
tests/unit/: test_document_processor.py  test_embedding_service.py  test_vector_db_service.py
