[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docmind-rag"
version = "1.0.0"
description = "Document Retrieval-Augmented Generation System"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["rag", "retrieval", "augmented", "generation", "llm", "vector-db", "embeddings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "streamlit==1.28.1",
    "groq==0.4.2",
    "sentence-transformers==2.2.2",
    "qdrant-client==2.7.0",
    "PyPDF2==3.0.1",
    "python-multipart==0.0.6",
    "prometheus-fastapi-instrumentator==6.1.0",
    "python-dotenv==1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2",
    "black==23.12.0",
    "flake8==6.1.0",
    "mypy==1.7.1",
    "jupyter==1.0.0",
    "ipython==8.17.2",
]

ollama = ["ollama==0.1.0"]
openai = ["openai==1.3.9"]
chroma = ["chromadb==0.4.14"]

[project.urls]
Homepage = "https://github.com/yourusername/docmind"
Repository = "https://github.com/yourusername/docmind.git"
Issues = "https://github.com/yourusername/docmind/issues"

[tool.setuptools]
packages = ["app", "app.api", "app.api.v1", "app.core", "app.schemas", "app.services"]

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v"
